contract branch start

--- a/package.json
+++ b/package.json
@@ -38,9 +38,13 @@
   "packageManager": "yarn@3.2.3",
   "devDependencies": {
     "husky": "^8.0.1",
-    "lint-staged": "^13.0.3"
+    "lint-staged": "^13.0.3",
+    "ts-node": "^10.9.2"
   },
   "engines": {
     "node": ">=18.17.0"
+  },
+  "dependencies": {
+    "hardhat": "^2.22.6"
   }
 }
